--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
                 <img src="images/image-qr-code.png" alt="QR Image">
             </section>
 
-            <p class="tittle">
+            <h1 class="tittle">
                 Improve your front-end
   
                 skills by buildings projects
                 
-            </p>
+            </h1>
 
 
-            <p class="description">
+            <h2 class="description">
                 Scan the QR code to visit Frontend 
 
                 Mentor and take your coding skills to the next level
-            </p>
+            </h2>
 
     </main>
 </body>
